{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 768,
  "lineage": "a4aca480-de88-cbcf-7949-69874a235c2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dos13_aderekh_grafana",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:335809563306:instance/i-09bd1ff6989e51611",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prometheus_profile_aderekh",
            "id": "i-09bd1ff6989e51611",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adereh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09454231388698f5f",
            "private_dns": "ip-172-31-3-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.237",
            "public_dns": "ec2-18-213-1-211.compute-1.amazonaws.com",
            "public_ip": "18.213.1.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0056fbd5977010f38",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dos13_aderekh_prometheus_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2d2ff0b51802509",
            "tags": {
              "Name": "dos13_aderekh_grafana"
            },
            "tags_all": {
              "Name": "dos13_aderekh_grafana"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfe141bfb2122375"
            ]
          },
          "dependencies": [
            "aws_elastic_beanstalk_application.elasticapp",
            "aws_elastic_beanstalk_environment.beanstalkappenv",
            "aws_iam_instance_profile.prometheus_profile_aderekh",
            "aws_iam_role.prometheus_role_aderekh",
            "aws_instance.dos13_aderekh_prometheus",
            "aws_security_group.dos13_aderekh_prometheus_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dos13_aderekh_prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a52ddb321b32a8c",
            "arn": "arn:aws:ec2:us-east-1:335809563306:instance/i-0e1ff1c4016dfc1c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prometheus_profile_aderekh",
            "id": "i-0e1ff1c4016dfc1c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adereh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b8c776bfc82a46b",
            "private_dns": "ip-172-31-3-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.3.151",
            "public_dns": "ec2-54-209-240-158.compute-1.amazonaws.com",
            "public_ip": "54.209.240.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019a95db6b1208535",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dos13_aderekh_prometheus_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2d2ff0b51802509",
            "tags": {
              "Name": "dos13_aderekh_prometheus"
            },
            "tags_all": {
              "Name": "dos13_aderekh_prometheus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bfe141bfb2122375"
            ]
          },
          "dependencies": [
            "aws_elastic_beanstalk_application.elasticapp",
            "aws_elastic_beanstalk_environment.beanstalkappenv",
            "aws_iam_instance_profile.prometheus_profile_aderekh",
            "aws_iam_role.prometheus_role_aderekh",
            "aws_security_group.dos13_aderekh_prometheus_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dos13_aderekh_asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:security-group/sg-0d7adbe3c3ec8a7ce",
            "description": "Dynamic Security Group for asg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7adbe3c3ec8a7ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "Dynamic Security Group",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dos13_aderekh_sg"
            },
            "tags_all": {
              "Name": "dos13_aderekh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042884a1f4f1e3b08"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dos13_aderekh_prometheus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:335809563306:security-group/sg-0bfe141bfb2122375",
            "description": "dos13_aderekh_prometheus_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bfe141bfb2122375",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "dos13_aderekh_prometheus_sg",
            "name_prefix": "",
            "owner_id": "335809563306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dos13_aderekh_prometheus_sg"
            },
            "tags_all": {
              "Name": "dos13_aderekh_prometheus_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042884a1f4f1e3b08"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}